fix align center

--- a/style4.css
+++ b/style4.css
@@ -33,25 +33,18 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(5, 100px);
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto 200px;
+    justify-items:center;
+    align-content: center;
+    border: 2px solid;
+    height: 400px;
    
 }
 
 .grid-container div {
     border: 1px solid ;
     
-}
-
-.grid-container .second-row {
-width: 300px;
-height: 300px;
-}
-
-.grid-container .first-row {
-    width: 200px;
-    height: 200px;
 }
 
 @media  only screen and (max-width: 768px) {
